--- a/artist/index.html
+++ b/artist/index.html
@@ -153,6 +153,20 @@
         <div id="eighth-box-title">
             <h1>Artworks</h1>
         </div>
+        <div id="eighth-box-photos">
+            <div id="e-box-1"></div>
+            <div id="e-box-2"></div>
+            <div id="e-box-3"></div>
+            <div id="e-box-4"></div>
+            <div id="e-box-5"></div>
+            <div id="e-box-6"></div>
+            <div id="e-box-7"></div>
+            <div id="e-box-8"></div>
+            <div id="e-box-9"></div>
+            <div id="e-box-10"></div>
+            <div id="e-box-11"></div>
+            <div id="e-box-12"></div>
+        </div>
     </div>
 </body>
 
