--- a/artist/index.html
+++ b/artist/index.html
@@ -168,6 +168,31 @@
             <div id="e-box-12"></div>
         </div>
     </div>
+    <div id="ninth-box">
+        <div id="ninth-title">
+            <h1>Related Artists</h1>
+        </div>
+        <div id="ninth-box-art">
+            <div class="ninth-box-art-sub">
+                <div class="ninth-box-art-img">
+
+                </div>
+                <p>Description</p>
+            </div>
+            <div class="ninth-box-art-sub">
+                <div class="ninth-box-art-img">
+
+                </div>
+                <p>Description</p>
+            </div>
+            <div class="ninth-box-art-sub">
+                <div class="ninth-box-art-img">
+
+                </div>
+                <p>Description</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 
