--- a/first/index.html
+++ b/first/index.html
@@ -14,14 +14,14 @@
         </div>
         <div id="panel-middle" class="panel">
             <div class="hover-field" onmouseleave="hoverout()" onmouseenter="hover()">
-                <img class="masked" src="https://kryogenix.org/images/css-jagged-kitten.jpg" alt="the kitten, masked">
+                <img class="masked-w" src="https://kryogenix.org/images/css-jagged-kitten.jpg" alt="the kitten, masked">
                 <i class="fas fa-arrow-up non-hover-hide"></i>
                 <p>Artists</p>
             </div>
             <div onmouseover="hover()" onmouseleave="hoverout()" class="hover-field">
                 <p>Explore</p>
                 <i class="fas fa-arrow-down non-hover-hide"></i>
-                <img class="masked" src="https://kryogenix.org/images/css-jagged-kitten.jpg" alt="the kitten, masked">
+                <img class="masked-m" src="https://kryogenix.org/images/css-jagged-kitten.jpg" alt="the kitten, masked">
             </div>
         </div>
         <div id="panel-right" class="panel">
